--- a/AntAI.vcxproj
+++ b/AntAI.vcxproj
@@ -69,7 +69,12 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <TargetName>jak_sin(Pi)</TargetName>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <TargetName>jak_sin(Pi)</TargetName>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -135,10 +140,25 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="code\ArenaInterface\ArenaPlayerInterface.hpp" />
+    <ClInclude Include="code\Arena\ArenaPlayerInterface.hpp" />
+    <ClInclude Include="code\Blackboard.hpp" />
+    <ClInclude Include="code\Geographer.hpp" />
+    <ClInclude Include="code\MainThread.hpp" />
+    <ClInclude Include="code\Math\IntVec2.hpp" />
+    <ClInclude Include="code\Math\MathUtils.hpp" />
+    <ClInclude Include="code\Math\RandomNumberGenerator.hpp" />
+    <ClInclude Include="code\Math\RawNoise.hpp" />
+    <ClInclude Include="code\Math\Vec2.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="code\Blackboard.cpp" />
     <ClCompile Include="code\dll\PlayerImpl.cpp" />
+    <ClCompile Include="code\Geographer.cpp" />
+    <ClCompile Include="code\MainThread.cpp" />
+    <ClCompile Include="code\Math\IntVec2.cpp" />
+    <ClCompile Include="code\Math\MathUtils.cpp" />
+    <ClCompile Include="code\Math\RandomNumberGenerator.cpp" />
+    <ClCompile Include="code\Math\Vec2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
