bad rabit hole. But got Dijkstra working. Is not late within 30 units

--- a/AntAI.vcxproj
+++ b/AntAI.vcxproj
@@ -140,7 +140,10 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="code\Architecture\FifoIterator.hpp" />
     <ClInclude Include="code\Architecture\Heap.hpp" />
+    <ClInclude Include="code\Architecture\Queue.hpp" />
+    <ClInclude Include="code\Architecture\QueueIterator.hpp" />
     <ClInclude Include="code\Arena\ArenaPlayerInterface.hpp" />
     <ClInclude Include="code\Async\AbstractRequest.hpp" />
     <ClInclude Include="code\Async\Dispatcher.hpp" />
@@ -148,7 +151,8 @@
     <ClInclude Include="code\Async\Worker.hpp" />
     <ClInclude Include="code\Blackboard.hpp" />
     <ClInclude Include="code\GameRequest.hpp" />
-    <ClInclude Include="code\Geographer.hpp" />
+    <ClInclude Include="code\Geographer\Geographer.hpp" />
+    <ClInclude Include="code\Geographer\SearchGraph.hpp" />
     <ClInclude Include="code\MainThread.hpp" />
     <ClInclude Include="code\Math\IntVec2.hpp" />
     <ClInclude Include="code\Math\MathUtils.hpp" />
@@ -157,14 +161,18 @@
     <ClInclude Include="code\Math\Vec2.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="code\Architecture\FifoIterator.cpp" />
     <ClCompile Include="code\Architecture\Heap.cpp" />
+    <ClCompile Include="code\Architecture\Queue.cpp" />
+    <ClCompile Include="code\Architecture\QueueIterator.cpp" />
     <ClCompile Include="code\Async\Dispatcher.cpp" />
     <ClCompile Include="code\Async\Request.cpp" />
     <ClCompile Include="code\Async\Worker.cpp" />
     <ClCompile Include="code\Blackboard.cpp" />
     <ClCompile Include="code\dll\PlayerImpl.cpp" />
     <ClCompile Include="code\GameRequest.cpp" />
-    <ClCompile Include="code\Geographer.cpp" />
+    <ClCompile Include="code\Geographer\Geographer.cpp" />
+    <ClCompile Include="code\Geographer\SearchGraph.cpp" />
     <ClCompile Include="code\MainThread.cpp" />
     <ClCompile Include="code\Math\IntVec2.cpp" />
     <ClCompile Include="code\Math\MathUtils.cpp" />
